tests/fixtures/ok/ReferenceOk1.php
<?php

namespace ReferenceOk1;

class A
{
	function test()
	{
	}
}


class B extends A
{
	function &test()
	{
	}
}
