tests/fixtures/bad/FinalBad.php
<?php

namespace FinalBad;

class A
{
	final function test()
	{
	}
}


class B extends A
{
	function test()
	{
	}
}
